<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="epg">Electronic Program Guide</string>
    <string name="app_name">Fantastic EPG</string>
    <string name="back"> Back </string>
    <string name="search_hint"> Type to search the events </string>
    <string name="search_app_label"> epgSearch </string>
    <string name="search"> search </string>
    <string name="all"> All </string>
    <string name="movie"> Movie </string>
    <string name="news">  News </string>
    <string name="sports">  Sports </string>
    <string name="pickDate">start_time </string>
    <string name="hint"> select date to filter... </string>
    <string name="byGerne"> By Gerne... </string>
    
    

</resources>
