<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

       <Button 
    	android:layout_width= "100px"
    	android:layout_height="wrap_content"
        android:id="@+id/bt_movie"
        android:text="@string/movie"  
        android:layout_alignParentBottom="true" 
        android:layout_alignParentLeft="true"
                       
        />
        
        <Button 
    	android:layout_width= "100px"
    	android:layout_height="wrap_content"
        android:id="@+id/bt_news"
        android:text="@string/news"  
        android:layout_alignParentBottom="true" 
        android:layout_toRightOf="@id/bt_movie"
               
        />
        
        <Button 
    	android:layout_width= "100px"
    	android:layout_height="wrap_content"
        android:id="@+id/bt_sports"
        android:text="@string/sports"  
        android:layout_alignParentBottom="true" 
        android:layout_toRightOf="@id/bt_news"
               
        />
         
        <Button 
    	android:layout_width= "100px"
    	android:layout_height="wrap_content"
        android:id="@+id/bt_all"
        android:text="All "  
        android:layout_alignParentBottom="true" 
        android:layout_toRightOf="@id/bt_sports"
               
        />
         
        <Button 
    	android:layout_width= "100px"
    	android:layout_height="wrap_content"
        android:id="@+id/bt_byServiceId"
        android:text="By ServiceId"  
        android:layout_alignParentBottom="true" 
        android:layout_toRightOf="@id/bt_all"
               
        />
        
 </RelativeLayout>
        